Feat/pa4 new run (#8)
* Remove updatedrun_pa4.sh from repo (keep locally) and ignore it

* Remove updatedrun_pa4.sh from repo (keep locally) and ignore it

* PA4: add scripts/newrun_pa4.sh (sed/awk run script)

---------

Co-authored-by: Liruchen3 <liruchen@sjsu.edu>

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # Directories
 data/artifacts
+scripts/updatedrun_pa4.sh
+updatedrun_pa4.sh
+scripts/updatedrun_pa4.sh
+out/
+logs/
+*.log
+.DS_Store
